# WSCpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  build.bat  main.cpp  server.js
assets/images/: WSCpp.icns
bundler/mac/: Info.plist  mac-bundle.sh
cli-ws/: CMakeLists.txt  main.cpp  message.h  ws.cpp  ws.h
cmake/: dependencies.cmake  platform.cmake  sources.cmake  utils.cmake
scripts/: assets-generator.py
scripts/macos/: Info.plist  build.sh  bundle.sh
server/: index.js  index.ts  package.json
src/: gui.cpp  gui.h  logger.h  main.cpp  message.h  resources.rc  ws.cpp  ws.h
src/gui/: gui.cpp  gui.h  ui.cpp  ui.h
src/gui/resources/: fonts.h  icons.h  interBold.h  interRegular.h  interSemiBold.h  logo.h  resources.h
src/gui/screens/: connectionScreen.cpp
src/gui/ui/: component.cpp  demo.cpp  geometry.cpp  layout.cpp  resources.cpp  theme.cpp  ui.h
src/utils/: WSCCommon.h  WSCLogger.h  WSCMessage.h  WSCQueue.h
src/websocket/: ws.cpp  ws.h
